Fix: Use flexbox for reliable image centering to fix alignment issues

--- a/NagiSwipe-main.css
+++ b/NagiSwipe-main.css
@@ -39,7 +39,11 @@
 .ns-img-wrap {
     position: absolute;
     inset: 0;
-    display: block;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     will-change: transform;
     pointer-events: none;
     backface-visibility: hidden;
@@ -47,14 +51,11 @@
 }
 
 .ns-img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    display: block;
     width: auto;
     height: auto;
     max-width: 100%;
     max-height: 100%;
-    transform: translate(-50%, -50%);
     object-fit: contain;
     user-select: none;
     -webkit-user-select: none;
